@@ -182,6 +182,14 @@ Job priority, defaults to C<0>. Jobs with a higher priority get performed first.
 
 Queue to put job in, defaults to C<default>.
 
+=item sequence
+
+  sequence => 'host:mojolicious.org'
+
+Sequence this job belongs to. The previous job from the sequence will be
+automatically added as a parent to continue the sequence. Note that this option
+is B<EXPERIMENTAL> and might change without warning!
+
 =back
 
 =head2 fail_job
@@ -261,6 +269,13 @@ List only jobs with these ids.
 
 List only jobs in these queues.
 
+=item sequences
+
+  sequences => ['host:localhost', 'host:mojolicious.org']
+
+List only jobs from these sequences. Note that this option is B<EXPERIMENTAL>
+and might change without warning!
+
 =item states
 
   states => ['inactive', 'active']
@@ -321,6 +336,12 @@ Epoch time job was finished.
 
 Job id.
 
+=item next
+
+  next => 10024
+
+Next job in sequence.
+
 =item notes
 
   notes => {foo => 'bar', baz => [1, 2, 3]}
@@ -332,6 +353,12 @@ Hash reference with arbitrary metadata for this job.
   parents => ['10023', '10024', '10025']
 
 Jobs this job depends on.
+
+=item previous
+
+  previous => 10022
+
+Previous job in sequence.
 
 =item priority
 
@@ -362,6 +389,12 @@ Epoch time job has been retried.
   retries => 3
 
 Number of times job has been retried.
+
+=item sequence
+
+  sequence => 'host:mojolicious.org'
+
+Sequence name.
 
 =item started
 
