@@ -1,4 +1,7 @@
 {{$NEXT}}
+  - Added EXPERIMENTAL sequence option to enqueue method and sequences option to list_jobs method
+    to support job sequences.
+  - Added next and previous fields to list_jobs method.
 
 v5.0.1    2020-06-17 23:20:46 EDT
   - Fixed tests to be less sensitive to error message contents.
